# flask-tutorial

./: README.md  app.py  pyproject.toml
static/: styles.css  styles.css.map  styles.scss
templates/: base.html  edit.html  index.html
